MIPT_Compiler/Analyzer/grammar.output
Terminals unused in grammar

   PT_EOF


Grammar

    0 $accept: Goal $end

    1 Goal: MainClass ClassDeclaration

    2 MainClass: ClassWord PT_ID LeftBrace MainFunction RightBrace

    3 ClassDeclaration: /* empty */
    4                 | Class ClassDeclaration

    5 Class: ClassStart LeftBrace ClassInternals RightBrace

    6 ClassStart: ClassWord PT_ID Extends

    7 Extends: /* empty */
    8        | ExtendsWord PT_ID

    9 ClassInternals: /* empty */
   10               | Function ClassInternals
   11               | Variable Semicolon ClassInternals

   12 MainFunction: PT_Public PT_Static PT_Void PT_Main LeftRoundBracket MainArgument RightRoundBracket LeftBrace Statement RightBrace

   13 MainArgument: PT_String LeftSquareBracket RightSquareBracket PT_ID

   14 Function: Visibility Type PT_ID ArgumentsList LeftBrace Statement Return RightBrace

   15 Visibility: PT_Public
   16           | PT_Private

   17 Return: PT_Return Expression Semicolon

   18 ArgumentsList: LeftRoundBracket RightRoundBracket
   19              | LeftRoundBracket Argument RightRoundBracket

   20 Argument: Variable
   21         | Variable PT_Coma Argument

   22 Variable: Type PT_ID

   23 Type: Integer
   24     | Integer PT_LeftSquareBracket PT_RightSquareBracket
   25     | Boolean
   26     | PT_ID
   27     | PT_Void

   28 Statement: /* empty */
   29          | StatementList Semicolon Statement

   30 StatementList: LeftBrace StatementList RightBrace
   31              | If LeftRoundBracket Expression RightRoundBracket StatementList PT_Else StatementList
   32              | While LeftRoundBracket Expression RightRoundBracket StatementList
   33              | Print LeftRoundBracket Expression RightRoundBracket
   34              | PT_ID Equals Expression
   35              | Variable

   36 Expression: Expression BinaryOperator Expression
   37           | Expression LeftSquareBracket Expression RightSquareBracket
   38           | Expression MethodCall Length
   39           | Expression MethodCall FunctionCall
   40           | ValueT
   41           | PT_ID
   42           | This
   43           | New Integer LeftSquareBracket Expression RightSquareBracket
   44           | New PT_ID LeftRoundBracket RightRoundBracket
   45           | Not Expression
   46           | LeftRoundBracket Expression RightRoundBracket

   47 BinaryOperator: PT_Plus
   48               | PT_Minus
   49               | PT_Division
   50               | PT_IntegerDivision
   51               | PT_And
   52               | PT_Or
   53               | PT_Multiplication
   54               | PT_Less
   55               | PT_More

   56 MethodCall: PT_Dot

   57 FunctionCall: PT_ID LeftRoundBracket ExpressionList RightRoundBracket

   58 ExpressionList: /* empty */
   59               | Expressions

   60 Expressions: Expression
   61            | Expression PT_Coma Expressions

   62 ValueT: PT_True
   63       | PT_False
   64       | PT_Number

   65 This: PT_This

   66 ClassWord: PT_Class

   67 ExtendsWord: PT_Extends

   68 Equals: PT_Equal

   69 If: PT_If

   70 Integer: PT_Integer

   71 Boolean: PT_Boolean

   72 LeftBrace: PT_LeftBrace

   73 RightBrace: PT_RightBrace

   74 LeftRoundBracket: PT_LeftRoundBracket

   75 RightRoundBracket: PT_RightRoundBracket

   76 LeftSquareBracket: PT_LeftSquareBracket

   77 RightSquareBracket: PT_RightSquareBracket

   78 Length: PT_Length

   79 New: PT_New

   80 Not: PT_Negation

   81 Print: PT_Print

   82 Semicolon: PT_Semicolon

   83 While: PT_While


Terminals, with rules where they appear

$end (0) 0
error (256)
PT_Void (258) 12 27
PT_String (259) 13
PT_Number (260) 64
PT_Boolean (261) 71
PT_Integer (262) 70
PT_True (263) 62
PT_False (264) 63
PT_Class (265) 66
PT_Static (266) 12
PT_Public (267) 12 15
PT_Private (268) 16
PT_Extends (269) 67
PT_Main (270) 12
PT_Print (271) 81
PT_If (272) 69
PT_While (273) 83
PT_Else (274) 31
PT_Length (275) 78
PT_This (276) 65
PT_New (277) 79
PT_Semicolon (278) 82
PT_ID (279) 2 6 8 13 14 22 26 34 41 44 57
PT_EOF (280)
PT_Dot (281) 56
PT_Coma (282) 21 61
PT_Return (283) 17
PT_LeftBrace (284) 72
PT_LeftSquareBracket (285) 24 76
PT_LeftRoundBracket (286) 74
PT_RightBrace (287) 73
PT_RightSquareBracket (288) 24 77
PT_RightRoundBracket (289) 75
PT_Negation (290) 80
PT_IntegerDivision (291) 50
PT_Division (292) 49
PT_Multiplication (293) 53
PT_Minus (294) 48
PT_Plus (295) 47
PT_Less (296) 54
PT_More (297) 55
PT_Or (298) 52
PT_And (299) 51
PT_Equal (300) 68
BRACKETS (301)
ARRAY (302)
CALL (303)
LENGTH (304)
NOT (305)
BINARY (306)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Goal (53)
    on left: 1, on right: 0
MainClass (54)
    on left: 2, on right: 1
ClassDeclaration (55)
    on left: 3 4, on right: 1 4
Class (56)
    on left: 5, on right: 4
ClassStart (57)
    on left: 6, on right: 5
Extends (58)
    on left: 7 8, on right: 6
ClassInternals (59)
    on left: 9 10 11, on right: 5 10 11
MainFunction (60)
    on left: 12, on right: 2
MainArgument (61)
    on left: 13, on right: 12
Function (62)
    on left: 14, on right: 10
Visibility (63)
    on left: 15 16, on right: 14
Return (64)
    on left: 17, on right: 14
ArgumentsList (65)
    on left: 18 19, on right: 14
Argument (66)
    on left: 20 21, on right: 19 21
Variable (67)
    on left: 22, on right: 11 20 21 35
Type (68)
    on left: 23 24 25 26 27, on right: 14 22
Statement (69)
    on left: 28 29, on right: 12 14 29
StatementList (70)
    on left: 30 31 32 33 34 35, on right: 29 30 31 32
Expression (71)
    on left: 36 37 38 39 40 41 42 43 44 45 46, on right: 17 31 32 33
    34 36 37 38 39 43 45 46 60 61
BinaryOperator (72)
    on left: 47 48 49 50 51 52 53 54 55, on right: 36
MethodCall (73)
    on left: 56, on right: 38 39
FunctionCall (74)
    on left: 57, on right: 39
ExpressionList (75)
    on left: 58 59, on right: 57
Expressions (76)
    on left: 60 61, on right: 59 61
ValueT (77)
    on left: 62 63 64, on right: 40
This (78)
    on left: 65, on right: 42
ClassWord (79)
    on left: 66, on right: 2 6
ExtendsWord (80)
    on left: 67, on right: 8
Equals (81)
    on left: 68, on right: 34
If (82)
    on left: 69, on right: 31
Integer (83)
    on left: 70, on right: 23 24 43
Boolean (84)
    on left: 71, on right: 25
LeftBrace (85)
    on left: 72, on right: 2 5 12 14 30
RightBrace (86)
    on left: 73, on right: 2 5 12 14 30
LeftRoundBracket (87)
    on left: 74, on right: 12 18 19 31 32 33 44 46 57
RightRoundBracket (88)
    on left: 75, on right: 12 18 19 31 32 33 44 46 57
LeftSquareBracket (89)
    on left: 76, on right: 13 37 43
RightSquareBracket (90)
    on left: 77, on right: 13 37 43
Length (91)
    on left: 78, on right: 38
New (92)
    on left: 79, on right: 43 44
Not (93)
    on left: 80, on right: 45
Print (94)
    on left: 81, on right: 33
Semicolon (95)
    on left: 82, on right: 11 17 29
While (96)
    on left: 83, on right: 32


State 0

    0 $accept: . Goal $end

    PT_Class  shift, and go to state 1

    Goal       go to state 2
    MainClass  go to state 3
    ClassWord  go to state 4


State 1

   66 ClassWord: PT_Class .

    $default  reduce using rule 66 (ClassWord)


State 2

    0 $accept: Goal . $end

    $end  shift, and go to state 5


State 3

    1 Goal: MainClass . ClassDeclaration

    PT_Class  shift, and go to state 1

    $default  reduce using rule 3 (ClassDeclaration)

    ClassDeclaration  go to state 6
    Class             go to state 7
    ClassStart        go to state 8
    ClassWord         go to state 9


State 4

    2 MainClass: ClassWord . PT_ID LeftBrace MainFunction RightBrace

    PT_ID  shift, and go to state 10


State 5

    0 $accept: Goal $end .

    $default  accept


State 6

    1 Goal: MainClass ClassDeclaration .

    $default  reduce using rule 1 (Goal)


State 7

    4 ClassDeclaration: Class . ClassDeclaration

    PT_Class  shift, and go to state 1

    $default  reduce using rule 3 (ClassDeclaration)

    ClassDeclaration  go to state 11
    Class             go to state 7
    ClassStart        go to state 8
    ClassWord         go to state 9


State 8

    5 Class: ClassStart . LeftBrace ClassInternals RightBrace

    PT_LeftBrace  shift, and go to state 12

    LeftBrace  go to state 13


State 9

    6 ClassStart: ClassWord . PT_ID Extends

    PT_ID  shift, and go to state 14


State 10

    2 MainClass: ClassWord PT_ID . LeftBrace MainFunction RightBrace

    PT_LeftBrace  shift, and go to state 12

    LeftBrace  go to state 15


State 11

    4 ClassDeclaration: Class ClassDeclaration .

    $default  reduce using rule 4 (ClassDeclaration)


State 12

   72 LeftBrace: PT_LeftBrace .

    $default  reduce using rule 72 (LeftBrace)


State 13

    5 Class: ClassStart LeftBrace . ClassInternals RightBrace

    PT_Void     shift, and go to state 16
    PT_Boolean  shift, and go to state 17
    PT_Integer  shift, and go to state 18
    PT_Public   shift, and go to state 19
    PT_Private  shift, and go to state 20
    PT_ID       shift, and go to state 21

    $default  reduce using rule 9 (ClassInternals)

    ClassInternals  go to state 22
    Function        go to state 23
    Visibility      go to state 24
    Variable        go to state 25
    Type            go to state 26
    Integer         go to state 27
    Boolean         go to state 28


State 14

    6 ClassStart: ClassWord PT_ID . Extends

    PT_Extends  shift, and go to state 29

    $default  reduce using rule 7 (Extends)

    Extends      go to state 30
    ExtendsWord  go to state 31


State 15

    2 MainClass: ClassWord PT_ID LeftBrace . MainFunction RightBrace

    PT_Public  shift, and go to state 32

    MainFunction  go to state 33


State 16

   27 Type: PT_Void .

    $default  reduce using rule 27 (Type)


State 17

   71 Boolean: PT_Boolean .

    $default  reduce using rule 71 (Boolean)


State 18

   70 Integer: PT_Integer .

    $default  reduce using rule 70 (Integer)


State 19

   15 Visibility: PT_Public .

    $default  reduce using rule 15 (Visibility)


State 20

   16 Visibility: PT_Private .

    $default  reduce using rule 16 (Visibility)


State 21

   26 Type: PT_ID .

    $default  reduce using rule 26 (Type)


State 22

    5 Class: ClassStart LeftBrace ClassInternals . RightBrace

    PT_RightBrace  shift, and go to state 34

    RightBrace  go to state 35


State 23

   10 ClassInternals: Function . ClassInternals

    PT_Void     shift, and go to state 16
    PT_Boolean  shift, and go to state 17
    PT_Integer  shift, and go to state 18
    PT_Public   shift, and go to state 19
    PT_Private  shift, and go to state 20
    PT_ID       shift, and go to state 21

    $default  reduce using rule 9 (ClassInternals)

    ClassInternals  go to state 36
    Function        go to state 23
    Visibility      go to state 24
    Variable        go to state 25
    Type            go to state 26
    Integer         go to state 27
    Boolean         go to state 28


State 24

   14 Function: Visibility . Type PT_ID ArgumentsList LeftBrace Statement Return RightBrace

    PT_Void     shift, and go to state 16
    PT_Boolean  shift, and go to state 17
    PT_Integer  shift, and go to state 18
    PT_ID       shift, and go to state 21

    Type     go to state 37
    Integer  go to state 27
    Boolean  go to state 28


State 25

   11 ClassInternals: Variable . Semicolon ClassInternals

    PT_Semicolon  shift, and go to state 38

    Semicolon  go to state 39


State 26

   22 Variable: Type . PT_ID

    PT_ID  shift, and go to state 40


State 27

   23 Type: Integer .
   24     | Integer . PT_LeftSquareBracket PT_RightSquareBracket

    PT_LeftSquareBracket  shift, and go to state 41

    $default  reduce using rule 23 (Type)


State 28

   25 Type: Boolean .

    $default  reduce using rule 25 (Type)


State 29

   67 ExtendsWord: PT_Extends .

    $default  reduce using rule 67 (ExtendsWord)


State 30

    6 ClassStart: ClassWord PT_ID Extends .

    $default  reduce using rule 6 (ClassStart)


State 31

    8 Extends: ExtendsWord . PT_ID

    PT_ID  shift, and go to state 42


State 32

   12 MainFunction: PT_Public . PT_Static PT_Void PT_Main LeftRoundBracket MainArgument RightRoundBracket LeftBrace Statement RightBrace

    PT_Static  shift, and go to state 43


State 33

    2 MainClass: ClassWord PT_ID LeftBrace MainFunction . RightBrace

    PT_RightBrace  shift, and go to state 34

    RightBrace  go to state 44


State 34

   73 RightBrace: PT_RightBrace .

    $default  reduce using rule 73 (RightBrace)


State 35

    5 Class: ClassStart LeftBrace ClassInternals RightBrace .

    $default  reduce using rule 5 (Class)


State 36

   10 ClassInternals: Function ClassInternals .

    $default  reduce using rule 10 (ClassInternals)


State 37

   14 Function: Visibility Type . PT_ID ArgumentsList LeftBrace Statement Return RightBrace

    PT_ID  shift, and go to state 45


State 38

   82 Semicolon: PT_Semicolon .

    $default  reduce using rule 82 (Semicolon)


State 39

   11 ClassInternals: Variable Semicolon . ClassInternals

    PT_Void     shift, and go to state 16
    PT_Boolean  shift, and go to state 17
    PT_Integer  shift, and go to state 18
    PT_Public   shift, and go to state 19
    PT_Private  shift, and go to state 20
    PT_ID       shift, and go to state 21

    $default  reduce using rule 9 (ClassInternals)

    ClassInternals  go to state 46
    Function        go to state 23
    Visibility      go to state 24
    Variable        go to state 25
    Type            go to state 26
    Integer         go to state 27
    Boolean         go to state 28


State 40

   22 Variable: Type PT_ID .

    $default  reduce using rule 22 (Variable)


State 41

   24 Type: Integer PT_LeftSquareBracket . PT_RightSquareBracket

    PT_RightSquareBracket  shift, and go to state 47


State 42

    8 Extends: ExtendsWord PT_ID .

    $default  reduce using rule 8 (Extends)


State 43

   12 MainFunction: PT_Public PT_Static . PT_Void PT_Main LeftRoundBracket MainArgument RightRoundBracket LeftBrace Statement RightBrace

    PT_Void  shift, and go to state 48


State 44

    2 MainClass: ClassWord PT_ID LeftBrace MainFunction RightBrace .

    $default  reduce using rule 2 (MainClass)


State 45

   14 Function: Visibility Type PT_ID . ArgumentsList LeftBrace Statement Return RightBrace

    PT_LeftRoundBracket  shift, and go to state 49

    ArgumentsList     go to state 50
    LeftRoundBracket  go to state 51


State 46

   11 ClassInternals: Variable Semicolon ClassInternals .

    $default  reduce using rule 11 (ClassInternals)


State 47

   24 Type: Integer PT_LeftSquareBracket PT_RightSquareBracket .

    $default  reduce using rule 24 (Type)


State 48

   12 MainFunction: PT_Public PT_Static PT_Void . PT_Main LeftRoundBracket MainArgument RightRoundBracket LeftBrace Statement RightBrace

    PT_Main  shift, and go to state 52


State 49

   74 LeftRoundBracket: PT_LeftRoundBracket .

    $default  reduce using rule 74 (LeftRoundBracket)


State 50

   14 Function: Visibility Type PT_ID ArgumentsList . LeftBrace Statement Return RightBrace

    PT_LeftBrace  shift, and go to state 12

    LeftBrace  go to state 53


State 51

   18 ArgumentsList: LeftRoundBracket . RightRoundBracket
   19              | LeftRoundBracket . Argument RightRoundBracket

    PT_Void               shift, and go to state 16
    PT_Boolean            shift, and go to state 17
    PT_Integer            shift, and go to state 18
    PT_ID                 shift, and go to state 21
    PT_RightRoundBracket  shift, and go to state 54

    Argument           go to state 55
    Variable           go to state 56
    Type               go to state 26
    Integer            go to state 27
    Boolean            go to state 28
    RightRoundBracket  go to state 57


State 52

   12 MainFunction: PT_Public PT_Static PT_Void PT_Main . LeftRoundBracket MainArgument RightRoundBracket LeftBrace Statement RightBrace

    PT_LeftRoundBracket  shift, and go to state 49

    LeftRoundBracket  go to state 58


State 53

   14 Function: Visibility Type PT_ID ArgumentsList LeftBrace . Statement Return RightBrace

    PT_Void       shift, and go to state 16
    PT_Boolean    shift, and go to state 17
    PT_Integer    shift, and go to state 18
    PT_Print      shift, and go to state 59
    PT_If         shift, and go to state 60
    PT_While      shift, and go to state 61
    PT_ID         shift, and go to state 62
    PT_LeftBrace  shift, and go to state 12

    $default  reduce using rule 28 (Statement)

    Variable       go to state 63
    Type           go to state 26
    Statement      go to state 64
    StatementList  go to state 65
    If             go to state 66
    Integer        go to state 27
    Boolean        go to state 28
    LeftBrace      go to state 67
    Print          go to state 68
    While          go to state 69


State 54

   75 RightRoundBracket: PT_RightRoundBracket .

    $default  reduce using rule 75 (RightRoundBracket)


State 55

   19 ArgumentsList: LeftRoundBracket Argument . RightRoundBracket

    PT_RightRoundBracket  shift, and go to state 54

    RightRoundBracket  go to state 70


State 56

   20 Argument: Variable .
   21         | Variable . PT_Coma Argument

    PT_Coma  shift, and go to state 71

    $default  reduce using rule 20 (Argument)


State 57

   18 ArgumentsList: LeftRoundBracket RightRoundBracket .

    $default  reduce using rule 18 (ArgumentsList)


State 58

   12 MainFunction: PT_Public PT_Static PT_Void PT_Main LeftRoundBracket . MainArgument RightRoundBracket LeftBrace Statement RightBrace

    PT_String  shift, and go to state 72

    MainArgument  go to state 73


State 59

   81 Print: PT_Print .

    $default  reduce using rule 81 (Print)


State 60

   69 If: PT_If .

    $default  reduce using rule 69 (If)


State 61

   83 While: PT_While .

    $default  reduce using rule 83 (While)


State 62

   26 Type: PT_ID .
   34 StatementList: PT_ID . Equals Expression

    PT_Equal  shift, and go to state 74

    $default  reduce using rule 26 (Type)

    Equals  go to state 75


State 63

   35 StatementList: Variable .

    $default  reduce using rule 35 (StatementList)


State 64

   14 Function: Visibility Type PT_ID ArgumentsList LeftBrace Statement . Return RightBrace

    PT_Return  shift, and go to state 76

    Return  go to state 77


State 65

   29 Statement: StatementList . Semicolon Statement

    PT_Semicolon  shift, and go to state 38

    Semicolon  go to state 78


State 66

   31 StatementList: If . LeftRoundBracket Expression RightRoundBracket StatementList PT_Else StatementList

    PT_LeftRoundBracket  shift, and go to state 49

    LeftRoundBracket  go to state 79


State 67

   30 StatementList: LeftBrace . StatementList RightBrace

    PT_Void       shift, and go to state 16
    PT_Boolean    shift, and go to state 17
    PT_Integer    shift, and go to state 18
    PT_Print      shift, and go to state 59
    PT_If         shift, and go to state 60
    PT_While      shift, and go to state 61
    PT_ID         shift, and go to state 62
    PT_LeftBrace  shift, and go to state 12

    Variable       go to state 63
    Type           go to state 26
    StatementList  go to state 80
    If             go to state 66
    Integer        go to state 27
    Boolean        go to state 28
    LeftBrace      go to state 67
    Print          go to state 68
    While          go to state 69


State 68

   33 StatementList: Print . LeftRoundBracket Expression RightRoundBracket

    PT_LeftRoundBracket  shift, and go to state 49

    LeftRoundBracket  go to state 81


State 69

   32 StatementList: While . LeftRoundBracket Expression RightRoundBracket StatementList

    PT_LeftRoundBracket  shift, and go to state 49

    LeftRoundBracket  go to state 82


State 70

   19 ArgumentsList: LeftRoundBracket Argument RightRoundBracket .

    $default  reduce using rule 19 (ArgumentsList)


State 71

   21 Argument: Variable PT_Coma . Argument

    PT_Void     shift, and go to state 16
    PT_Boolean  shift, and go to state 17
    PT_Integer  shift, and go to state 18
    PT_ID       shift, and go to state 21

    Argument  go to state 83
    Variable  go to state 56
    Type      go to state 26
    Integer   go to state 27
    Boolean   go to state 28


State 72

   13 MainArgument: PT_String . LeftSquareBracket RightSquareBracket PT_ID

    PT_LeftSquareBracket  shift, and go to state 84

    LeftSquareBracket  go to state 85


State 73

   12 MainFunction: PT_Public PT_Static PT_Void PT_Main LeftRoundBracket MainArgument . RightRoundBracket LeftBrace Statement RightBrace

    PT_RightRoundBracket  shift, and go to state 54

    RightRoundBracket  go to state 86


State 74

   68 Equals: PT_Equal .

    $default  reduce using rule 68 (Equals)


State 75

   34 StatementList: PT_ID Equals . Expression

    PT_Number            shift, and go to state 87
    PT_True              shift, and go to state 88
    PT_False             shift, and go to state 89
    PT_This              shift, and go to state 90
    PT_New               shift, and go to state 91
    PT_ID                shift, and go to state 92
    PT_LeftRoundBracket  shift, and go to state 49
    PT_Negation          shift, and go to state 93

    Expression        go to state 94
    ValueT            go to state 95
    This              go to state 96
    LeftRoundBracket  go to state 97
    New               go to state 98
    Not               go to state 99


State 76

   17 Return: PT_Return . Expression Semicolon

    PT_Number            shift, and go to state 87
    PT_True              shift, and go to state 88
    PT_False             shift, and go to state 89
    PT_This              shift, and go to state 90
    PT_New               shift, and go to state 91
    PT_ID                shift, and go to state 92
    PT_LeftRoundBracket  shift, and go to state 49
    PT_Negation          shift, and go to state 93

    Expression        go to state 100
    ValueT            go to state 95
    This              go to state 96
    LeftRoundBracket  go to state 97
    New               go to state 98
    Not               go to state 99


State 77

   14 Function: Visibility Type PT_ID ArgumentsList LeftBrace Statement Return . RightBrace

    PT_RightBrace  shift, and go to state 34

    RightBrace  go to state 101


State 78

   29 Statement: StatementList Semicolon . Statement

    PT_Void       shift, and go to state 16
    PT_Boolean    shift, and go to state 17
    PT_Integer    shift, and go to state 18
    PT_Print      shift, and go to state 59
    PT_If         shift, and go to state 60
    PT_While      shift, and go to state 61
    PT_ID         shift, and go to state 62
    PT_LeftBrace  shift, and go to state 12

    $default  reduce using rule 28 (Statement)
